Hiding prev/next pagination links if first/last page active

--- a/css/scss/_main.scss
+++ b/css/scss/_main.scss
@@ -317,6 +317,9 @@ article {
     padding: 0;
     text-align: center;
 		
+		li.noprevnext {
+			display: none!important;
+		}
 
 		& li {
 			display: none;
