Using base_url for links

--- a/includes/header.html
+++ b/includes/header.html
@@ -9,23 +9,23 @@
 		<nav class="clearfix">
       <ul>
           <li>
-          	<a href="/parcours"><i class="fa fa-graduation-cap"></i>Parcours</a>
+          	<a href="{{ base_url }}/parcours"><i class="fa fa-graduation-cap"></i>Parcours</a>
 							<ul>
-								<li><a class="hvr_under" href="/parcours/M1">Maîtrise Sciences du langage</a></li>
-								<li><a class="hvr_under" href="/parcours/M2">Master Sciences du langage</a></li>
-								<li><a class="hvr_under" href="/parcours/M2pro/">Master Édition</a></li>
-								<li><a class="hvr_under" href="/parcours/cv">CV</a></li>
+								<li><a class="hvr_under" href="{{ base_url }}/parcours/M1">Maîtrise Sciences du langage</a></li>
+								<li><a class="hvr_under" href="{{ base_url }}/parcours/M2">Master Sciences du langage</a></li>
+								<li><a class="hvr_under" href="{{ base_url }}/parcours/M2pro/">Master Édition</a></li>
+								<li><a class="hvr_under" href="{{ base_url }}/parcours/cv">CV</a></li>
 							</ul>
           </li>
           <li>
-          	<a href="/tutos"><i class="fa fa-keyboard-o"></i>Geekeries</a>
+          	<a href="{{ base_url }}/tutos"><i class="fa fa-keyboard-o"></i>Geekeries</a>
 						<ul>
-							<li><a class="hvr_under" href="/tutos/GCweb">GCweb</a></li>
-							<li><a class="hvr_under" href="/tutos/LaTeX">LaTeX</a></li>
-							<li><a class="hvr_under" href="/tutos/Linux">Linux</a></li>
-							<li><a class="hvr_under" href="/tutos/Pico">Pico CMS</a></li>
-							<li><a class="hvr_under" href="/tutos/Web">Web</a></li>
-							<li><a class="hvr_under" href="/tutos/Windows">Windows</a></li>
+							<li><a class="hvr_under" href="{{ base_url }}/tutos/GCweb">GCweb</a></li>
+							<li><a class="hvr_under" href="{{ base_url }}/tutos/LaTeX">LaTeX</a></li>
+							<li><a class="hvr_under" href="{{ base_url }}/tutos/Linux">Linux</a></li>
+							<li><a class="hvr_under" href="{{ base_url }}/tutos/Pico">Pico CMS</a></li>
+							<li><a class="hvr_under" href="{{ base_url }}/tutos/Web">Web</a></li>
+							<li><a class="hvr_under" href="{{ base_url }}/tutos/Windows">Windows</a></li>
 						</ul>
           </li>
       </ul>
